--- a/client/src/components/detail.less
+++ b/client/src/components/detail.less
@@ -25,8 +25,17 @@
       color: #999999;
     }
   }
+  &-container, &-sideBar {
+    transition: all .3s linear;
+  }
   &.showTOC &-container {
     transform: translate(-@tocwidth/2);
+  }
+  &.hideTOC &-container {
+    transform: translate(0);
+  }
+  &.hideTOC &-sideBar {
+    transform: translate(@tocwidth);
   }
   &-content {
     color: #555;
@@ -74,6 +83,24 @@
       margin-bottom: 3px;
       transition: all .3s linear;
       position: relative;
+      transform-origin:center center;
+    }
+    
+    &-line:last-child {
+      margin-bottom: 0px;
+    }
+    &.show:hover &-line:first-child {
+      transform: rotate(-45deg);
+      top: 2px;
+      left: -1px;
+      width: 70%;
+    }
+    &.show:hover &-line:last-child {
+      transform: rotate(45deg);
+      top: -2px;
+      left: -1px;
+      position: relative;
+      width: 70%;
     }
     &.close &-line:first-child {
       transform: rotate(-45deg);
@@ -87,24 +114,8 @@
     &.close &-line:last-child {
       transform: rotate(45deg);
       width: 100%;
-      top: -5px;
+      top: 0px;
       left: 0;
-    }
-    &-line:last-child {
-      margin-bottom: 0px;
-    }
-    &:hover &-line:first-child {
-      transform: rotate(-45deg);
-      top: 2px;
-      left: -1px;
-      width: 70%;
-    }
-    &:hover &-line:last-child {
-      transform: rotate(45deg);
-      top: -2px;
-      left: -1px;
-      position: relative;
-      width: 70%;
     }
   }
   .editormd-preview-container, .editormd-html-preview {
@@ -113,5 +124,20 @@
     ul {
       list-style: inherit;
     } 
+  }
+
+  @media screen and (max-width: 1050px) {
+    &-sideBar, &-sideBar-toggle {
+      // display: none;
+      transform: translate(@tocwidth);
+    }
+    &-container, &.showTOC &-container {
+      transform: translate(0);
+    }
+  }
+  @media screen and (max-width: 760px) {
+    & {
+      width: 100%;
+    }
   }
 }
