--- a/client/src/components/admin/admin.less
+++ b/client/src/components/admin/admin.less
@@ -5,7 +5,18 @@
   }
   .admin-right-content {
     padding: 20px 0;
-    max-width: 640px;
+    // max-width: 640px;
     width: 100%;
+
+    .ant-card {
+      &:hover {
+        border-color: #E4E5EB;
+        box-shadow: 0 10px 20px rgba(0,0,0,.2);
+      }
+      .category-item {
+        font-size: 14px;
+      }
+    }
+    
   }
 }
