--- a/client/src/css/common.less
+++ b/client/src/css/common.less
@@ -30,7 +30,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	// font-family: 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
-  font-family: 'Quicksand','Source Code Pro', monospace, "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "WenQuanYi Micro Hei", "Microsoft Yahei", sans-serif;q
+  font-family: 'Quicksand','Source Code Pro', monospace, "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "WenQuanYi Micro Hei", "Microsoft Yahei", sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 body {
@@ -46,13 +46,8 @@ a {
 ul {
 	list-style: none;
 }
-h1, h2, h3, h4, h5, h6 {
-  margin: 10px 0;
-  font-family: inherit;
-  font-weight: bold;
-  line-height: 20px;
-  color: inherit;
-  text-rendering: optimizelegibility;
+p {
+  margin: 0 0 10px;
 }
 
 code *, pre * {
