--- a/client/src/css/common.less
+++ b/client/src/css/common.less
@@ -30,7 +30,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	// font-family: 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
-  font-family: 'Quicksand','Source Code Pro', monospace, "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "WenQuanYi Micro Hei", "Microsoft Yahei", sans-serif;
+  font-family: 'Quicksand','Source Code Pro', "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "WenQuanYi Micro Hei", Microsoft YaHei, sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 body {
@@ -51,7 +51,7 @@ p {
 }
 
 code *, pre * {
-  font-family: 'Source Code Pro', monospace, 'Ubuntu Mono', 'Droid Serif', 'Quicksand', "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "WenQuanYi Micro Hei", "Microsoft Yahei", sans-serif !important;
+  font-family: 'Source Code Pro', monospace, 'Ubuntu Mono', 'Droid Serif', 'Quicksand', "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "WenQuanYi Micro Hei", Microsoft YaHei, sans-serif !important;
 }
 ::selection {
   background: #48bb28;
