--- a/client/src/components/admin/admin.less
+++ b/client/src/components/admin/admin.less
@@ -38,6 +38,18 @@
         }
       }
     }
-    
+  }
+
+  .admin-tag {
+    color:#fff;
+    background: #2db7f5;
+    display: inline-block;
+    padding: 6px 15px;
+    font-size: 13px;
+    line-height: 1.5;
+    border-radius: 3px;
+    box-shadow: 2px 2px 6px rgba(0,0,0,.2);
+    margin-right: 15px;
+    cursor: pointer;
   }
 }
