后台管理 文章列表

--- a/client/src/css/common.less
+++ b/client/src/css/common.less
@@ -113,6 +113,9 @@ code *, pre * {
 		margin-bottom: 10px;
 	}
 }
+.cursor {
+  cursor: pointer;
+}
 
 @media screen and (max-width: 640px) {
   .navbar{
