--- a/client/src/components/admin/admin.less
+++ b/client/src/components/admin/admin.less
@@ -52,4 +52,13 @@
     margin-right: 15px;
     cursor: pointer;
   }
+  .textarea-editor {
+    margin-top: 10px;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    border: 1px solid #eee; 
+    padding: 20px;
+    resize: none;
+  }
 }
