文章页标签创建

--- a/client/src/components/admin/admin.less
+++ b/client/src/components/admin/admin.less
@@ -53,12 +53,23 @@
     cursor: pointer;
   }
   .textarea-editor {
-    margin-top: 10px;
     width: 100%;
     height: 100%;
     outline: none;
     border: 1px solid #eee; 
     padding: 20px;
     resize: none;
+  }
+  .editor-container {
+    height: 100%;
+    overflow: auto;
+    border: 1px solid #eee;
+    border-left: none;
+  }
+  .tags-container {
+    border: 1px solid #d9d9d9;
+    padding: 2px 3px;
+    border-radius: 6px;
+    min-height: 32px;
   }
 }
