编辑文章修改

--- a/client/src/components/admin/admin.less
+++ b/client/src/components/admin/admin.less
@@ -72,4 +72,12 @@
     border-radius: 6px;
     min-height: 32px;
   }
+  .tag-input, .tag-input:hover, .tag-input:focus {
+    border: none;
+    width: auto;
+    box-shadow: none;
+  }
+}
+@media screen and (max-width: 768px) {
+
 }
