--- a/client/src/css/common.less
+++ b/client/src/css/common.less
@@ -117,6 +117,17 @@ code *, pre * {
   cursor: pointer;
 }
 
+.editor-container {
+  ul {
+    list-style-type: disc;
+  }
+  ul ul, ol ul {
+    list-style-type: circle;
+  }
+  ol {
+    list-style-type: decimal;
+  }
+}
 @media screen and (max-width: 640px) {
   .navbar{
     display: none;
