--- a/client/src/components/admin/admin.less
+++ b/client/src/components/admin/admin.less
@@ -96,6 +96,10 @@
       background-color: #017e66;
       color: #fff;
     }
+    &.isChoosen {
+      background: rgba(1,126,102,.08);
+      color: #017e66;
+    }
   }
 }
 @media screen and (max-width: 768px) {
