--- a/client/src/components/admin/admin.less
+++ b/client/src/components/admin/admin.less
@@ -97,8 +97,9 @@
       color: #fff;
     }
     &.isChoosen {
-      background: rgba(1,126,102,.08);
-      color: #017e66;
+      background-color: #017e66;
+      color: #fff;
+      cursor: default;
     }
   }
 }
