--- a/client/src/components/admin/admin.less
+++ b/client/src/components/admin/admin.less
@@ -50,6 +50,7 @@
     border-radius: 3px;
     box-shadow: 2px 2px 6px rgba(0,0,0,.2);
     margin-right: 15px;
+    margin-bottom: 10px;
     cursor: pointer;
   }
   .textarea-editor {
