文章页修改

--- a/client/src/components/admin/admin.less
+++ b/client/src/components/admin/admin.less
@@ -103,6 +103,18 @@
       cursor: default;
     }
   }
+
+  .coverimg {
+    border-radius: 5px;
+    border: 1px solid #d9d9d9;
+    margin-top: 8px;
+    overflow: hidden;
+    .coverimg-img {
+      display: block;
+      width: 100%;
+      cursor: pointer;
+    }
+  }
 }
 @media screen and (max-width: 768px) {
 
